--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -60,6 +60,7 @@ body {
 .showcase .overlay .h1 {
   font-size: 36px;
   padding-bottom: 20px;
+  font-family: 'Yellowtail', cursive;
 }
 
 /* login styles */ 
