--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -127,9 +127,9 @@ max-width: 305px;
   padding-bottom: 20px;
 }
 
-.grid .grid-items{
+/* .grid .grid-items{
   
-}
+} */
 
 .grid .grid-items div{
  /* background-color: #f1f1f1 ;*/
